grammer.txt
program        = declaration* EOF ;

declaration    = varDecl | statement ;

varDecl        = "var" IDENTIFIER ( "=" expression )? ";" ;
statement      = exprStmt | printStmt ;

exprStmt       = expression ";" ;
printStmt      = "print" expression ";" ;

expression     = assignment ;
assignment     = IDENTIFIER "=" assignment | equality ;
equality       = comparison ( ( "!=" | "==" ) comparison )* ;
comparison     = addition ( ( ">" | ">=" | "<" | "<=" ) addition )* ;
addition       = multiplication ( ( "+" | "-" ) multiplication )* ;
multiplication = unary ( ( "/" | "*" ) unary )* ;
unary          = ( "!" | "-" ) unary
                 | primary ;
primary        = NUMBER | STRING | "false" | "true" | "nil"
                 | "(" expression ")"
                 | IDENTIFIER ;
